--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,5 @@ AWS_SECRET_KEY=your_secret_key_here
 AWS_REGION=your_region_here
 SENDER_EMAIL=your_email@example.com
 RECIPIENT_EMAIL=recipient@example.com
+NEW_FILE_RECIPIENT_EMAILS=a@example.com,b@example.com
+LOG_RECIPIENT_EMAILS=c@example.com,d@example.com
