use module structure, add tests

--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,5 @@ SENDER_EMAIL=your_email@example.com
 RECIPIENT_EMAIL=recipient@example.com
 NEW_FILE_RECIPIENT_EMAILS=a@example.com,b@example.com
 LOG_RECIPIENT_EMAILS=c@example.com,d@example.com
+URL=https://example.com
+TABLE_NAME=example_table
