--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 # Core dependencies
-beautifulsoup4==4.12.3
-requests==2.31.0
-python-dotenv==1.0.1
+-c requirements-prod.txt
+boto3==1.34.34
 
-# AWS SDK - not needed for Lambda as it's included
-# boto3==1.34.34
+# Test dependencies
+pytest==8.3.4
+pytest-mock==3.14.0
+requests-mock==1.12.1
